ci: Pin dependencies

--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -18,17 +18,17 @@ jobs:
                     - "8.3"
         steps:
             -   name: "Checkout"
-                uses: "actions/checkout@v6.0.2"
+                uses: "actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd" # v6.0.2
 
             -   name: "Set up PHP"
-                uses: "shivammathur/setup-php@2.36.0"
+                uses: "shivammathur/setup-php@44454db4f0199b8b9685a5d763dc37cbf79108e1" # 2.36.0
                 with:
                     coverage: "none"
                     php-version: "${{ matrix.php-version }}"
                     tools: "phive"
 
             -   name: "Install Composer dependencies"
-                uses: "ramsey/composer-install@v3"
+                uses: "ramsey/composer-install@3cf229dc2919194e9e36783941438d17239e8520" # 3.1.1
 
             -   name: "Install ComposerNormalize"
                 run: "phive install composer-normalize --trust-gpg-keys C00543248C87FB13"
@@ -54,17 +54,17 @@ jobs:
                     - "8.3"
         steps:
             -   name: "Checkout"
-                uses: "actions/checkout@v6.0.2"
+                uses: "actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd" # v6.0.2
 
             -   name: "Set up PHP"
-                uses: "shivammathur/setup-php@2.36.0"
+                uses: "shivammathur/setup-php@44454db4f0199b8b9685a5d763dc37cbf79108e1" # 2.36.0
                 with:
                     coverage: "none"
                     php-version: "${{ matrix.php-version }}"
                     tools: "phive"
 
             -   name: "Install Composer dependencies"
-                uses: "ramsey/composer-install@v3"
+                uses: "ramsey/composer-install@3cf229dc2919194e9e36783941438d17239e8520" # 3.1.1
 
             -   name: "Run Auto-Review tests"
                 run: "make autoreview"
@@ -83,16 +83,16 @@ jobs:
                     - "8.4"
         steps:
             -   name: "Checkout"
-                uses: "actions/checkout@v6.0.2"
+                uses: "actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd" # v6.0.2
 
             -   name: "Set up PHP"
-                uses: "shivammathur/setup-php@2.36.0"
+                uses: "shivammathur/setup-php@44454db4f0199b8b9685a5d763dc37cbf79108e1" # 2.36.0
                 with:
                     coverage: "none"
                     php-version: "${{ matrix.php-version }}"
 
             -   name: "Install Composer dependencies"
-                uses: "ramsey/composer-install@v3"
+                uses: "ramsey/composer-install@3cf229dc2919194e9e36783941438d17239e8520" # 3.1.1
 
             -   name: "Run the PHPUnit tests"
                 run: "make phpunit"
@@ -107,7 +107,7 @@ jobs:
                     - "7.3"
         steps:
             -   name: "Checkout"
-                uses: "actions/checkout@v6.0.2"
+                uses: "actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd" # v6.0.2
 
             -   name: "Remove incompatible dev dependencies"
                 run: |
@@ -117,13 +117,13 @@ jobs:
                     composer remove --dev phpstan/* --no-update --no-install;
 
             -   name: "Set up PHP"
-                uses: "shivammathur/setup-php@2.36.0"
+                uses: "shivammathur/setup-php@44454db4f0199b8b9685a5d763dc37cbf79108e1" # 2.36.0
                 with:
                     coverage: "none"
                     php-version: "${{ matrix.php-version }}"
 
             -   name: "Install Composer dependencies"
-                uses: "ramsey/composer-install@v3"
+                uses: "ramsey/composer-install@3cf229dc2919194e9e36783941438d17239e8520" # 3.1.1
 
             -   name: "Run the PHPUnit tests"
                 run: "vendor/bin/phpunit --configuration phpunit_legacy.xml.dist"
@@ -137,17 +137,17 @@ jobs:
                     - "8.3"
         steps:
             -   name: "Checkout"
-                uses: "actions/checkout@v6.0.2"
+                uses: "actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd" # v6.0.2
 
             -   name: "Set up PHP"
-                uses: "shivammathur/setup-php@2.36.0"
+                uses: "shivammathur/setup-php@44454db4f0199b8b9685a5d763dc37cbf79108e1" # 2.36.0
                 with:
                     coverage: "xdebug"
                     php-version: "${{ matrix.php-version }}"
                     tools: "phive"
 
             -   name: "Install Composer dependencies"
-                uses: "ramsey/composer-install@v3"
+                uses: "ramsey/composer-install@3cf229dc2919194e9e36783941438d17239e8520" # 3.1.1
 
             -   name: "Install Infection"
                 run: "phive install infection --trust-gpg-keys C5095986493B4AA0"
@@ -173,17 +173,17 @@ jobs:
                     - "8.3"
         steps:
             -   name: "Checkout"
-                uses: "actions/checkout@v6.0.2"
+                uses: "actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd" # v6.0.2
 
             -   name: "Set up PHP"
-                uses: "shivammathur/setup-php@2.36.0"
+                uses: "shivammathur/setup-php@44454db4f0199b8b9685a5d763dc37cbf79108e1" # 2.36.0
                 with:
                     coverage: "xdebug"
                     php-version: "${{ matrix.php-version }}"
                     tools: "phive"
 
             -   name: "Install Composer dependencies"
-                uses: "ramsey/composer-install@v3"
+                uses: "ramsey/composer-install@3cf229dc2919194e9e36783941438d17239e8520" # 3.1.1
 
             -   name: "Setup the expected output"
                 run: "mv e2e/expected-output-ubuntu e2e/expected-output"
@@ -200,17 +200,17 @@ jobs:
                     - "8.3"
         steps:
             -   name: "Checkout"
-                uses: "actions/checkout@v6.0.2"
+                uses: "actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd" # v6.0.2
 
             -   name: "Set up PHP"
-                uses: "shivammathur/setup-php@2.36.0"
+                uses: "shivammathur/setup-php@44454db4f0199b8b9685a5d763dc37cbf79108e1" # 2.36.0
                 with:
                     coverage: "xdebug"
                     php-version: "${{ matrix.php-version }}"
                     tools: "phive"
 
             -   name: "Install Composer dependencies"
-                uses: "ramsey/composer-install@v3"
+                uses: "ramsey/composer-install@3cf229dc2919194e9e36783941438d17239e8520" # 3.1.1
 
             -   name: "Setup the expected output"
                 run: "mv e2e/expected-output-osx e2e/expected-output"
@@ -227,17 +227,17 @@ jobs:
                     - "8.3"
         steps:
             -   name: "Checkout"
-                uses: "actions/checkout@v6.0.2"
+                uses: "actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd" # v6.0.2
 
             -   name: "Set up PHP"
-                uses: "shivammathur/setup-php@2.36.0"
+                uses: "shivammathur/setup-php@44454db4f0199b8b9685a5d763dc37cbf79108e1" # 2.36.0
                 with:
                     coverage: "xdebug"
                     php-version: "${{ matrix.php-version }}"
                     tools: "phive"
 
             -   name: "Install Composer dependencies"
-                uses: "ramsey/composer-install@v3"
+                uses: "ramsey/composer-install@3cf229dc2919194e9e36783941438d17239e8520" # 3.1.1
 
             -   name: "Setup the expected output"
                 run: "mv e2e/expected-output-windows e2e/expected-output"
@@ -254,17 +254,17 @@ jobs:
                     - "8.2"
         steps:
             -   name: "Checkout"
-                uses: "actions/checkout@v6.0.2"
+                uses: "actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd" # v6.0.2
 
             -   name: "Set up PHP"
-                uses: "shivammathur/setup-php@2.36.0"
+                uses: "shivammathur/setup-php@44454db4f0199b8b9685a5d763dc37cbf79108e1" # 2.36.0
                 with:
                     coverage: "xdebug"
                     php-version: "${{ matrix.php-version }}"
                     tools: "phive"
 
             -   name: "Install Composer dependencies"
-                uses: "ramsey/composer-install@v3"
+                uses: "ramsey/composer-install@3cf229dc2919194e9e36783941438d17239e8520" # 3.1.1
 
             -   name: "Setup the expected output"
                 run: "mv e2e/expected-output-ubuntu-restricted e2e/expected-output"
