--- a/.github/workflows/inspection.yaml
+++ b/.github/workflows/inspection.yaml
@@ -27,17 +27,17 @@ jobs:
                       image: "macos-14"
         steps:
             -   name: "Checkout"
-                uses: "actions/checkout@v6.0.2"
+                uses: "actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd" # v6.0.2
 
             -   name: "Set up PHP"
-                uses: "shivammathur/setup-php@2.36.0"
+                uses: "shivammathur/setup-php@44454db4f0199b8b9685a5d763dc37cbf79108e1" # 2.36.0
                 with:
                     coverage: "xdebug"
                     php-version: "${{ matrix.php-version }}"
                     tools: "phive"
 
             -   name: "Install Composer dependencies"
-                uses: "ramsey/composer-install@v3"
+                uses: "ramsey/composer-install@3cf229dc2919194e9e36783941438d17239e8520" # 3.1.1
 
             -   name: "Execute finders"
                 run: "php bin/execute.php"
