--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "phpstan/phpstan-phpunit": "^2.0",
         "phpstan/phpstan-strict-rules": "^2.0",
         "phpunit/phpunit": "^8.5.31 || ^9.5.26",
+        "symfony/polyfill-mbstring": "^1.33",
         "webmozarts/strict-phpunit": "^7.5"
     },
     "autoload": {
